# mima

./: .env  .gitignore  Cargo.toml  README.md  about-label.md  create_role_and_database.md  demo.sqlite  go.mod  go.sum  handler.go  init.go  main.go  sessions.go
auto_getter/: Cargo.toml
auto_getter/auto_getter_derive/: Cargo.toml
auto_getter/auto_getter_derive/src/: lib.rs
auto_getter/src/: lib.rs
database/: database.go  metadata.go  secretkey.go  tx.go
migrations/2019-02-16-101829_create_tables/: down.sql  up.sql
mima_forms/: Cargo.toml
mima_forms/src/: lib.rs
model/: model.go
src/: TODO.md  forms.rs  main.rs  models.rs  schema.rs
static/: add.html  backup.html  change-pwd.html  edit.html  import.html  index.html  search.html  sign-in.html  simple.css  style.css
static/ts/src/: index.ts
stmt/: statements.go
templates/: add.hbs  add.html.tera  base.html.tera  delete.html.tera  deleteforever.html.tera  edit.html.tera  index.html.tera  layout.hbs  logged-in.hbs  logged-in.html.tera  login.hbs  login.html.tera  new-account.hbs  new-account.html.tera  recyclebin.html.tera  timeout.hbs  timeout.html.tera
ts/: package-lock.json
ts/src/: add.ts  backup.ts  change-pwd.ts  color-password.ts  edit.ts  import.ts  index.ts  mima-item.ts  mj.ts  search.ts  sign-in.ts  util.ts
util/: util.go
