[package]
name = "mima"
version = "0.1.0"
authors = ["ahui2016 <ahui.2015@icloud.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4", features = ["postgres"] }
log = "0.4"
dotenv = "0.13.0"
chrono = "0.4"
time = "0.1"
uuid = { version = "0.7", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool", "serve", "tera_templates"]
